[project]
name = "agent0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "dacite>=1.8.1",
    "dm-launchpad-nightly",
    "einops>=0.8.0",
    "gymnasium==0.28.1",
    "hydra-core>=1.3.2",
    "lz4>=4.3.3",
    "opencv-python>=4.10.0.84",
    "prefetch-generator>=1.0.3",
    "shortuuid>=1.0.13",
    "tensorflow==2.18.0",
    "torch>=2.5.1",
    "wandb[media]>=0.18.7",
]

[tool.uv.sources]
dm-launchpad-nightly = { path = "dist/dm_launchpad_nightly-0.6.0.dev20241115-cp312-cp312-manylinux2014_x86_64.whl" }
